--- a/index.html
+++ b/index.html
@@ -389,12 +389,12 @@
                         <h5 style="text-align:left;">Feb 2018 - Apr 2019</h5>
                         <p style="text-align:left;color:#fff"><em>Researcher</em></p>
                         <ul style="text-align:left;">
-                            <li>orked with an international team of 12 members to develop a 1U CubeSat to study RF
+                            <li>Worked with an international team of 12 members to develop a 1U CubeSat to study RF
                                 connection in poverty-
                                 stricken areas (predominantly Africa). Evaluated various available technologies to
                                 detect and localize radio signals
                                 from space.</li>
-                            <li>tudied the feasibility of these technologies for CubeSat. In particular, space-based
+                            <li>Studied the feasibility of these technologies for CubeSat. In particular, space-based
                                 systems are used to analyze
                                 poverty, map schools, and perform disaster monitoring.</li>
                         </ul>
