--- a/index.html
+++ b/index.html
@@ -595,6 +595,38 @@
                         </ul>
                     </div>
 
+                    <div class="col-md-12 mt-4 mt-md-0 icon-box" data-aos="fade-up" data-aos-delay="100">
+                        <h4 style="text-align:left;"><a style="color:#12d640">Manned mars mission risks
+                                evaluation</a><br> </h4>
+                        <h5 style="text-align:left;">Laura Bettiol, A De La Torre, D Patel, F Oluwafemi, G
+                            Kamaletdinova, R Kumar Singh, U Heshani, Y Lakmal, A Rivolta, A Sorokin</h5>
+                        <p style="text-align:left;color:#fff"><em>69th International Astronautical Congress (IAC
+                                2018)</em></p>
+                        <ul style="text-align:left;">
+                            <li>Mars missions can be seen as a natural step in space exploration, as Earth-like
+                                environmental conditions and the length of the interplanetary flight are the most
+                                crucial for planetary exploration compared to other celestial bodies of the Solar
+                                System. On the other hand, these missions require detailed planning and worldwide
+                                collaboration, because of the need of extremely high financial resources and technical
+                                capabilities. Many researches focused on different aspects of Mars missions are being
+                                conducted in these recent years. They include flight preparation, lift-off,
+                                interplanetary journey, habitat and Life Support Systems (LSS) design, Extravehicular
+                                Activities (EVA), precise landing, planetary exploration, etc. This paper summarizes
+                                identified safety issues that can arise during future Mars missions. Based on the
+                                analysis of previous studies, where conditions of the interplanetary flight were
+                                studied, including environmental issues, Mars habitat and the spacecraft design were
+                                discussed and the spacesuit concept was analyzed, the most critical hazards have been
+                                defined and the whole mission has been taken into consideration. In particular, possible
+                                failures and hazards for the habitat on Mars, space station and spacesuit, including
+                                off-nominal situations and their influence on the safety of the astronauts have been
+                                investigated. This work is based on the results of previous projects carried out within
+                                the Space Generation Advisory Council’s (SGAC) Space Safety and Sustainability project
+                                group, which aims to bring an international and interdisciplinary vision to this topic
+                                and discuss it from different perspectives, creating a foundation for further
+                                developments.</li>
+                        </ul>
+                    </div>
+
                 </div>
             </div>
         </div>
