name in r paper

--- a/index.html
+++ b/index.html
@@ -599,7 +599,7 @@
                         <h4 style="text-align:left;"><a style="color:#12d640">Manned mars mission risks
                                 evaluation</a><br> </h4>
                         <h5 style="text-align:left;">Laura Bettiol, A De La Torre, D Patel, F Oluwafemi, G
-                            Kamaletdinova, ROBIN K. SINGH, U Heshani, Y Lakmal, A Rivolta, A Sorokin</h5>
+                            Kamaletdinova, ROBIN Kr SINGH, U Heshani, Y Lakmal, A Rivolta, A Sorokin</h5>
                         <p style="text-align:left;color:#fff"><em>69th International Astronautical Congress (IAC
                                 2018)</em></p>
                         <ul style="text-align:left;">
