changed visitor counters

--- a/index.html
+++ b/index.html
@@ -643,7 +643,7 @@
                 <div class="col-lg-12" data-aos="fade-up">
                     <div class="col-md-12 mt-4 mt-md-0 icon-box" data-aos="fade-up" data-aos-delay="100"
                         style="background:#fff">
-                        <h4 style="text-align:left;color:#09203a">Languages and Databases</h4>
+                        <h4 style="text-align:left;color:#09203a">Programming Languages</h4>
                         <p style="text-align:left;">
                             <img src="https://www.vectorlogo.zone/logos/python/python-horizontal.svg"
                                 alt="vectorlogo.zone" height="50" width="150">
@@ -783,14 +783,14 @@
     <script src="assets/js/main.js"></script>
 
 
-    <div id="sfc1ay4tb86ndx8tuxyn4zsp3da9mzndtku"></div>
+    <!-- <div id="sfc1ay4tb86ndx8tuxyn4zsp3da9mzndtku"></div>
     <script type="text/javascript"
         src="https://counter6.optistats.ovh/private/counter.js?c=1ay4tb86ndx8tuxyn4zsp3da9mzndtku&down=async"
         async></script>
     <br><a href="https://www.freecounterstat.com">website counter</a><noscript><a href="https://www.freecounterstat.com"
             title="website counter"><img
                 src="https://counter6.optistats.ovh/private/freecounterstat.php?c=1ay4tb86ndx8tuxyn4zsp3da9mzndtku"
-                border="0" title="website counter" alt="website counter"></a></noscript>
+                border="0" title="website counter" alt="website counter"></a></noscript> -->
 
 
 
