--- a/index.html
+++ b/index.html
@@ -49,6 +49,18 @@
     </script>
 </head>
 
+
+<!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-5BF2S6QPC6"></script>
+<script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag() { dataLayer.push(arguments); }
+    gtag('js', new Date());
+
+    gtag('config', 'G-5BF2S6QPC6');
+</script>
+
+
 <body>
 
     <!-- Google Tag Manager (noscript) -->
