--- a/index.html
+++ b/index.html
@@ -726,9 +726,9 @@
                     <div class="info-box">
                         <i class="bx bx-map"></i>
                         <h3>My Address</h3>
-                        <p>Taylor Avenue</p>
-                        <p>Corvallis</p>
-                        <p>Oregon</p>
+                        <!-- <p>Taylor Avenue</p> -->
+                        <p>Denver</p>
+                        <p>Colorado</p>
                     </div>
                 </div>
 
