--- a/index.html
+++ b/index.html
@@ -754,7 +754,7 @@
                         <i class="bx bx-envelope"></i>
                         <h3>Email</h3>
                         <p>robinvishen@gmail.com</p>
-                        <p>singhrob@oregonstate.edu</p>
+                        <!-- <p>singhrob@oregonstate.edu</p> -->
                     </div>
                 </div>
                 <div class="col-md-6 mt-4 d-flex align-items-stretch">
