changed intro section

--- a/index.html
+++ b/index.html
@@ -116,48 +116,61 @@
                     <img src="assets/img/LiPhoto.jpg" class="img-fluid" alt="">
                 </div>
                 <div class="col-lg-8 pt-4 pt-lg-0 content" data-aos="fade-left">
-                    <p>Welcome to my digital workspace! I'm Robin K. Singh, a passionate robotics engineer with a keen
+                    <p>Welcome to my digital workspace! I'm Robin K. Singh, a robotics engineer passionate about
+                        enabling autonomous systems to operate intelligently in dynamic and unstructured environments.
+                    </p>
+
+
+
+
+
+
+
+
+                    <!-- I'm Robin K. Singh, a passionate robotics engineer with a keen
                         interest in decision-making systems for autonomous robots operating in unstructured
                         environments. My journey in robotics has been fueled by a relentless curiosity to explore the
-                        boundaries of machine autonomy and adaptability.
+                        boundaries of machine autonomy and adaptability. -->
+                    <!-- </p> -->
+                    <p>
+                        I recently completed my M.S. in Robotics at Oregon State University, where my research focuses
+                        on underwater robotic grasping.
+                        My work involves predicting and quantifying uncertainty in the future motion of submerged
+                        objects under variable wave conditions,
+                        and developing dynamic grasping algorithms that adapt to real-time changes.
+                        This research was recognized with a presentation at the IEEE OCEANS 2024 conference.
+
                     </p>
                     <p>
-                        Currently, I'm pursuing my M.S. in Robotics at Oregon State University, with a focus on
-                        underwater robotic grasping. For my thesis, I've taken on the challenge of quantifying
-                        uncertainty and predicting the future pose of objects oscillating underwater under various wave
-                        conditions. This work involves developing dynamic grasping algorithms that account for real-time
-                        changes in object motion to achieve successful grasps. My research has been recognized by the
-                        IEEE OCEANS conference, where I had the opportunity to present my findings.
+                        Beyond underwater robotics, my expertise spans motion planning using machine learning (including
+                        sequential modeling and imitation learning approaches)
+                        and SLAM, sensor fusion, and localization for autonomous vehicles. My experience integrating
+                        perception, planning, and control systems allows me to bridge research and real-world deployment
+                        effectively.
                     </p>
                     <p>
-                        As a Graduate Research Assistant at the Robotics Decision Making Laboratory (RDML), I’ve built
-                        custom ROS2-pyBullet nodes to enable real-time autonomy for underwater robotic systems. My
-                        contributions include creating prediction models for object motion, designing safety behaviors
-                        such as obstacle avoidance, and conducting extensive testing at the O.H. Hinsdale Wave Research
-                        Lab.
+                        I hold a bachelor's degree in Electronics and Communication Engineering from Delhi Technological
+                        University, giving me a strong foundation across both hardware and software domains.
+                        Throughout my career, I've contributed to diverse projects—from building rider assistance and
+                        crash detection systems for electric motorcycles, to designing gimbal stabilization platforms,
+                        to developing navigation systems for autonomous ground vehicles.
+
                     </p>
                     <p>
-                        Before delving into underwater robotics, I contributed to rider assistance and safety systems at
-                        Yatri Motorcycles. My role involved developing crash detection systems, implementing precise
-                        navigation algorithms using extended Kalman filters, and designing battery management systems.
-                        These experiences have honed my skills in integrating perception, planning, and control modules
-                        for real-world robotic applications.
+                        This multidisciplinary background places me at a unique intersection of robotics, autonomy, and
+                        system integration.
+                        I am a fast learner, passionate about exploring new technologies and frameworks, and committed
+                        to continuously expanding my technical stack to meet emerging challenges in robotics and AI.
+
                     </p>
                     <p>
-                        My academic foundation is complemented by hands-on experience in motion planning, SLAM, and
-                        dynamics simulation. I’ve worked on projects ranging from autonomous ground vehicles navigating
-                        crowded sidewalks to designing gimbal systems for improved camera stability and localization.
+                        Thank you for visiting — feel free to connect if you'd like to collaborate or explore the future
+                        of autonomy together!
                     </p>
-                    <p>
-                        Through my research and professional experiences, I aim to push the boundaries of what
-                        autonomous systems can achieve in complex and dynamic environments. Whether it’s underwater, on
-                        the road, or in unpredictable terrains, my goal is to enable robots to make informed decisions
-                        and adapt to their surroundings seamlessly.
-                    </p>
-                    <p>
+                    <!-- <p>
                         Thank you for visiting my page. Let’s connect and explore the fascinating world of robotics
                         together!
-                    </p>
+                    </p> -->
                     <!-- <div class="row">
             <div class="col-lg-6">
               <ul>
