--- a/index.html
+++ b/index.html
@@ -800,7 +800,7 @@
     <script src="assets/vendor/typed.js/typed.min.js"></script>
     <script type="text/javascript">
         var typed = new Typed('.typing', {
-            strings: ["Robotics Engineer", "Algorithm Developer", "Programmer", "AI Enthusiast"],
+            strings: ["Robotics Engineer", "AI Enthusiast", "Autonomy Developer", "Rustacean"],
             loop: true,
             typeSpeed: 65,
             backSpeed: 65
