--- a/index.html
+++ b/index.html
@@ -680,7 +680,7 @@
                                 alt="wikimedia.org" height="50" width="60">
                             <!-- <img src="https://www.vectorlogo.zone/logos/julialang/julialang-ar21.svg"
                                 alt="vectorlogo.zone" height="50" width="150"> -->
-                            <img src="https://www.logo.wine/a/logo/R_(programming_language)/R_(programming_language)-Logo.wine.svg"
+                            <img src="https://www.logo.wine/a/logo/Rust_(programming_language)/Rust_(programming_language)-Logo.wine.svg"
                                 alt="upload.wikimedia.org" height="50" width="60">
                             <!-- <img src="https://www.vectorlogo.zone/logos/python/python-horizontal.svg"
                                 alt="vectorlogo.zone" height="50" width="150"> -->
