--- a/index.html
+++ b/index.html
@@ -463,10 +463,31 @@
             <div class="row">
                 <div class="col-lg-12" data-aos="fade-up">
 
+
+                    <!-- Project 3: OpenCV VLM Bootcamp -->
+                    <div class="col-md-12 mt-4 mt-md-0 icon-box" data-aos="fade-up" data-aos-delay="100">
+                        <h4 style="text-align:left;">
+                            <a style="color:#12d640">Vision-Language Integration with OpenCV</a><br>
+                        </h4>
+                        <h5 style="text-align:left;">June 2025 – July 2025</h5>
+                        <p style="text-align:left;color:#fff"><em>OpenCV VLM Bootcamp Project</em></p>
+                        <ul style="text-align:left;">
+                            <li>Completed the OpenCV bootcamp on vision-language models (VLMs), focused on integrating
+                                image understanding with text-based AI systems.</li>
+                            <li>Built a basic VLM application that accepts an image input and generates descriptive
+                                captions using pre-trained models.</li>
+                            <li>Utilized OpenCV, PyTorch, and Hugging Face Transformers for image processing and natural
+                                language generation.</li>
+                            <li>Explored attention mechanisms and multimodal embeddings to enhance the interpretability
+                                of model outputs.</li>
+                        </ul>
+                    </div>
+
+
                     <!-- Project 1: Option Pricing -->
                     <div class="col-md-12 mt-4 mt-md-0 icon-box" data-aos="fade-up" data-aos-delay="100">
                         <h4 style="text-align:left;"><a style="color:#12d640">F1tenth autonomous racing</a><br> </h4>
-                        <h5 style="text-align:left;">Oct 2024 - Present</h5>
+                        <h5 style="text-align:left;">Oct 2024 - March 2025</h5>
                         <p style="text-align:left;color:#fff"><em>Independent Project</em></p>
                         <ul style="text-align:left;">
                             <li>Uses algorithms to map the environment and track vehicle location using laser scans and
