--- a/index.html
+++ b/index.html
@@ -766,8 +766,8 @@
                         <i class="bx bx-map"></i>
                         <h3>My Address</h3>
                         <!-- <p>Taylor Avenue</p> -->
-                        <p>Denver</p>
-                        <p>Colorado</p>
+                        <p>Corvallis</p>
+                        <p>Oregon</p>
                     </div>
                 </div>
 
