--- a/index.html
+++ b/index.html
@@ -386,12 +386,15 @@
                         <h6 style="text-align:left;">December 2022 - Present</h6>
                         <!-- <p style="text-align:left;color:#fff"><em>Robotics Decision Making Laboratory (RDML) </em></p> -->
                         <ul style="text-align:left;">
-                            <li>Built custom ROS2pyBullet nodes for various autonomy features for real time grasping for
-                                Bravo arm.
+                            <li>Developed a novel dynamic grasping algorithm for moving objects underwater, with
+                                simulation and scenario generation pipelines built in PyBullet and ROS 2
                             </li>
-                            <li>Developed safety behaviors like custom collision monitoring and obstacle avoidance.</li>
-                            <li>Created a prediction model for unstructured environment to generate 6-DOF grasp moving
-                                objects.</li>
+                            <li>rained a neural network using the ACRONYM dataset, containing 8,872 object meshes and
+                                17.7M labeled grasp poses; transformed successful grasp trajectories into depth video
+                                sequences with stereo and IMU simulation.</li>
+                            <li>chieved up to 85% grasp success rate in high-occlusion, dynamic underwater scenarios,
+                                validating robustness of
+                                the learned policy against clutter and motion noise.</li>
                             <!-- <li>.</li> -->
                         </ul>
                     </div>
