--- a/index.html
+++ b/index.html
@@ -389,10 +389,10 @@
                             <li>Developed a novel dynamic grasping algorithm for moving objects underwater, with
                                 simulation and scenario generation pipelines built in PyBullet and ROS 2
                             </li>
-                            <li>rained a neural network using the ACRONYM dataset, containing 8,872 object meshes and
+                            <li>Trained a neural network using the ACRONYM dataset, containing 8,872 object meshes and
                                 17.7M labeled grasp poses; transformed successful grasp trajectories into depth video
                                 sequences with stereo and IMU simulation.</li>
-                            <li>chieved up to 85% grasp success rate in high-occlusion, dynamic underwater scenarios,
+                            <li>Achieved up to 85% grasp success rate in high-occlusion, dynamic underwater scenarios,
                                 validating robustness of
                                 the learned policy against clutter and motion noise.</li>
                             <!-- <li>.</li> -->
@@ -405,13 +405,15 @@
                         <h5 style="text-align:left;">July 2020 - July 2021</h5>
                         <p style="text-align:left;color:#fff"><em>Robotics & Automation Lead</em></p>
                         <ul style="text-align:left;">
-                            <li>Developed safety and crash detection systems using off-the-shelf components that
-                                contacted our
-                                company, first
-                                responders as well as select contact of rider.</li>
-                            <li>Implemented extended Kalman filter in Mapbox for precise navigation, using GPS data for
-                                real-time
-                                adjustment.</li>
+                            <li>Built lane-level localization and short-horizon trajectory prediction using C++ EKF that
+                                fuses GPS and IMU; integrated the module into the ROS-based navigation stack.</li>
+                            <li>Collected and curated on-road logs and Mapbox-generated simulated routes;
+                                time-synchronized and calibrated
+                                sequences, then used data-driven noise/bias modeling to tune filter parameters and
+                                improve prediction stability</li>
+                            <li>Enabled reliable route-following and intent-aware planning in dense city traffic;
+                                reduced GPS-only jitter and
+                                maintained stable localization through urban-canyon segments during field testing</li>
                         </ul>
                     </div>
 
