--- a/index.html
+++ b/index.html
@@ -400,10 +400,9 @@
                     </div>
                     <div class="col-md-12 mt-4 mt-md-0 icon-box" data-aos="fade-up" data-aos-delay="100">
                         <h4 style="text-align:left;"><a href="https://www.yatrimotorcycles.com/"
-                                style="color:#12d640">Yatri
-                                Motorcycles</a><br> </h4>
-                        <h5 style="text-align:left;">July 2020 - July 2021</h5>
-                        <p style="text-align:left;color:#fff"><em>Robotics & Automation Lead</em></p>
+                                style="color:#12d640">Yatri Motorcycles</a><br> </h4>
+                        <h5 style="text-align:left;"><a style="color:#23f554">Robotics & Automation Lead</a><br></h5>
+                        <h6 style="text-align:left;">July 2020 - July 2021</h6>
                         <ul style="text-align:left;">
                             <li>Built lane-level localization and short-horizon trajectory prediction using C++ EKF that
                                 fuses GPS and IMU; integrated the module into the ROS-based navigation stack.</li>
