--- a/index.html
+++ b/index.html
@@ -399,6 +399,27 @@
                         </ul>
                     </div>
                     <div class="col-md-12 mt-4 mt-md-0 icon-box" data-aos="fade-up" data-aos-delay="100">
+                        <h4 style="text-align:left;"><a href="https://research.engr.oregonstate.edu/rdml/"
+                                style="color:#12d640">LLLLLLLLLLLLLLLLLLLLLLLLLLLLLLLLLLAAAAAAA</a><br> </h4>
+                        <h5 style="text-align:left;"><a
+                                style="color:#23f554">AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA</a><br>
+                        </h5>
+                        <h6 style="text-align:left;">December 2022 - Present</h6>
+                        <!-- <p style="text-align:left;color:#fff"><em>Robotics Decision Making Laboratory (RDML) </em></p> -->
+                        <ul style="text-align:left;">
+                            <li>Developed a novel dynamic grasping algorithm for moving objects underwater, with
+                                simulation and scenario generation pipelines built in PyBullet and ROS 2
+                            </li>
+                            <li>Trained a neural network using the ACRONYM dataset, containing 8,872 object meshes and
+                                17.7M labeled grasp poses; transformed successful grasp trajectories into depth video
+                                sequences with stereo and IMU simulation.</li>
+                            <li>Achieved up to 85% grasp success rate in high-occlusion, dynamic underwater scenarios,
+                                validating robustness of
+                                the learned policy against clutter and motion noise.</li>
+                            <!-- <li>.</li> -->
+                        </ul>
+                    </div>
+                    <div class="col-md-12 mt-4 mt-md-0 icon-box" data-aos="fade-up" data-aos-delay="100">
                         <h4 style="text-align:left;"><a href="https://www.yatrimotorcycles.com/"
                                 style="color:#12d640">Yatri Motorcycles</a><br> </h4>
                         <h5 style="text-align:left;"><a style="color:#23f554">Robotics & Automation Lead</a><br></h5>
