--- a/index.html
+++ b/index.html
@@ -408,7 +408,7 @@
                         <ul style="text-align:left;">
                             <li>Built a low-latency, multi-ticker market-data pipeline (REST + sockets/WebSocket),
                                 normalized quotes/trades, and maintained rolling windows for intrabar features.</li>
-                            <li>TDesigned signals for volume-anomaly detection and news-aware events, routing triggers
+                            <li>Designed signals for volume-anomaly detection and news-aware events, routing triggers
                                 to an execution engine</li>
                             <li>Implemented risk-aware execution (position limits, throttles, kill-switch) with
                                 structured logs/metrics, plus resilience via retry/backoff, watchdogs, and reconnect
